--- a/index.html
+++ b/index.html
@@ -22,7 +22,62 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+  <!--
+      === TOP RIGHT MENU ===
+ -->
+<div class="menu_top_right">
+  <ul>
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Images</a></li>
+      <li><a href="#">
+            <img title="Applications Google" class="svg svg_display" src="img/display.svg"></img>
+        </a></li>
+      <li><a href="#">
+            <img title="0 notification(s) Google" class="svg svg_bell" src="img/bell.svg"></img>
+        </a></li>
+      <li><a href="#">
+            <img title="Compte Google Guess &#10; (mail@gmail.com)" id="guess_menu" src="img/guest.jpg"></img>
+        </a></li>
+  </ul>
+</div>
+
+<!--
+    === BODY OF WEBSITE ===
+-->
+<div class="body">
+
+  <img src="img/google_logo.png"></img>
+  <input id="searchbar" type="text"></input>
+  <input class="submit" type="submit" value="Recherche Google">
+  <input class="submit" type="submit" value="J'ai de la chance">
+  <p>Google disponible en : <a href="#">English</a></p>
+</div>
+
+
+<footer>
+
+<div class="footer">
+
+  <div class="footer_top">
+    France
+  </div>
+
+  <div class="footer_bot">
+    <p><span class="span_left"><a href="#">Publicité</a> <a href="#">Entreprise</a> <a href="#">À propos</a></span> <span class="span_right"><a href="#">Info consommateurs</a> <a href="#">Confidentialité</a> <a href="#">Conditions</a> <a href="#">Paramètres</a></span></p>
+  </div>
+
+</div>
+
+</footer>
+
+
+
+
+
+
+
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
